--- a/Source/PowerManager.GUI/Configuration/ConfigurationUserControl.xaml
+++ b/Source/PowerManager.GUI/Configuration/ConfigurationUserControl.xaml
@@ -11,13 +11,12 @@
              d:DataContext="{d:DesignInstance IsDesignTimeCreatable=True, Type={x:Type local:Configuration}}"
              >
     <UserControl.Resources>
-        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter1"/>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
     </UserControl.Resources>
     <Grid>
         <CheckBox x:Name="ShutdownOnNoConnection" Content="Shutdown on No Connection" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" IsChecked="{Binding ShutdownOnNoConnection}"/>
-        <CheckBox x:Name="ShutdownOnDateTime" Content="Shutdown on Date Time" HorizontalAlignment="Left" Margin="10,37,0,0" VerticalAlignment="Top" IsChecked="{Binding ShutdownOnDateTime}"/>
-        <xctk:DateTimePicker x:Name="ShutdownDateTime" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="205,37,0,0" Value="{Binding ShutdownDateTime}" Visibility="{Binding ShutdownOnDateTime, Converter={StaticResource BooleanToVisibilityConverter1}}" IsUndoEnabled="False" Kind="Local" Minimum="{Binding Source={x:Static sys:DateTime.Now}}"/>
+        <CheckBox x:Name="ShutdownOnDateTime" Content="Shutdown on Date Time" HorizontalAlignment="Left" Margin="10,37,0,0" VerticalAlignment="Top" IsChecked="{Binding ShutdownOnDateTime}" Checked="ShutdownOnDateTime_Checked"/>
+        <xctk:DateTimePicker x:Name="ShutdownDateTime" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="205,37,0,0" Value="{Binding ShutdownDateTime}" Visibility="{Binding ShutdownOnDateTime, Converter={StaticResource BooleanToVisibilityConverter}}" IsUndoEnabled="False" Kind="Local"/>
         <TextBox x:Name="HostAddressTextbox" HorizontalAlignment="Left" Margin="287,9,0,0" TextWrapping="Wrap" Text="{Binding HostAddress, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Visibility="{Binding ShutdownOnNoConnection, Converter={StaticResource BooleanToVisibilityConverter}}" MinWidth="120" MinHeight="20"/>
         <TextBlock HorizontalAlignment="Left" Margin="205,9,0,0" TextWrapping="Wrap" Text="Host Address:" VerticalAlignment="Top" Visibility="{Binding ShutdownOnNoConnection, Converter={StaticResource BooleanToVisibilityConverter}}"/>
     </Grid>
